--- a/app/views/conditions/edit.erb
+++ b/app/views/conditions/edit.erb
@@ -1,24 +1,36 @@
 <h1>Edit Weather Condition</h1>
   <form action="/conditions/<%= @condition.id %>" method="POST">
       <input type="hidden" name="_method" value="PUT"/>
-      
+
       <input type="date" name="condition[date]" value= "<%= @condition.date %>" placeholder="Date"/><br>
+      <label for="name">Date</label>
 
-      <input type="integer" name="condition[max_temperature]" value="<%= @condition.max_temperature %>" placeholder= "Max Temperature"/><br>
+      <input type="text" name="condition[max_temperature]" value="<%= @condition.max_temperature %>" placeholder= "Max Temperature"/><br>
+      <label for="name">Maximum Temperature</label>
 
-      <input type="integer" name="condition[mean_temperature]" value="<%= @condition.mean_temperature %>" placeholder= "Mean Temperature"/><br>
+      <input type="text" name="condition[mean_temperature]" value="<%= @condition.mean_temperature %>" placeholder= "Mean Temperature"/><br>
+      <label for="name">Mean Temperature</label>
 
-      <input type="integer" name="condition[min_temperature]" value="<%= @condition.min_temperature %>" placeholder= "Min Temperature"/><br>
+      <input type="text" name="condition[min_temperature]" value="<%= @condition.min_temperature %>" placeholder= "Min Temperature"/><br>
+      <label for="name">Minumum Temperature</label>
 
-      <input type="integer" name="condition[mean_humidity]" value="<%= @condition.mean_humidity %>" placeholder= "Mean Humidity"/><br>
+      <input type="text" name="condition[mean_humidity]" value="<%= @condition.mean_humidity %>" placeholder= "Mean Humidity"/><br>
+      <label for="name">Mean Humidity</label>
 
-      <input type="integer" name="condition[mean_visibility]" value="<%= @condition.mean_visibility %>" placeholder= "Mean Visibility"/><br>
+      <input type="text" name="condition[mean_visibility]" value="<%= @condition.mean_visibility %>" placeholder= "Mean Visibility"/><br>
+      <label for="name">Mean Visibility</label>
 
-      <input type="integer" name="condition[mean_wind_speed]" value="<%= @condition.mean_wind_speed %>" placeholder= "Mean Wind Speed"/><br>
+      <input type="text" name="condition[mean_wind_speed]" value="<%= @condition.mean_wind_speed %>" placeholder= "Mean Wind Speed"/><br>
+      <label for="name">Mean Wind Speed</label>
 
-      <input type="float" name="condition[precipitation]" value="<%= @condition.precipitation %>" placeholder= "Precipitation"/><br>
+      <input type="text" name="condition[precipitation]" value="<%= @condition.precipitation %>" placeholder= "Precipitation"/><br>
+      <label for="name">Precipitation</label>
 
-      <input type="integer" name="condition[zipcode]" value="<%= @condition.zipcode %>" placeholder= "Zipcode"/><br>
+      <input type="text" name="condition[zipcode]" value="<%= @condition.zipcode %>" placeholder= "Zipcode"/><br>
+      <label for="name">Zip Code</label></br>
 
-      <input type="submit" value="Submit Changes"/>
+      <a class="waves-effect waves-light btn orange darken-4">
+        <input type="submit" value="Submit Changes"/>
+      </a>
+
   </form>
