--- a/app/views/stations/station-dashboard.erb
+++ b/app/views/stations/station-dashboard.erb
@@ -9,15 +9,17 @@
                  <li> Total count of stations: <%= @stations.total_stations %></li>
                  <li> Average bikes available per station: <%= @stations.average_bikes_per_station %></li>
                  <li> Most bikes available at a station:<%= @stations.max_bikes %></li>
-                 <li> Station(s) where the most bikes are available: <%= @stations.stations_with_most_bikes %></li>
+                 <li> Station(s) where the most bikes are available:
+                   <select class="browser-default">
+                         <% @stations.stations_with_most_bikes.each do |station| %>
+                           <option> <%= station.name %> </option>
+                         <% end %>
+                   </select>
+                  </li>
                  <li> Fewest bikes available at a station: <%= @stations.fewest_bikes %></li>
                  <li> Station(s) where the fewest bikes are available: <%= @stations.find_by_fewest_bikes %></li>
                  <li> Most recently installed station: <%= @stations.newest_station %></li>
                  <li> Oldest station: <%= @stations.oldest_station %></li>
-                 <li> Number of rides started at this station: <%= @stations.rides_started_at_station%></li>
-                 <li> Number of rides ended at this station: <%= @stations.rides_ended_at_station %></li>
-                 <li> Most frequent destination station (for rides that began at this station): <%= @stations.most_frequent_destination %></li>
-                 <li> Most frequent origination station (for rides that ended at this station): <%= @stations.most_frequent_origination_station %></li>
                  <li> Date with the highest number of trips started at this station: <%= @stations.date_with_most_trips %></li>
                  <li> Most frequent zip code for users starting trips at this station: <%= @stations.most_frequent_zipcode %></li>
                  <li> Bike ID most frequently starting a trip at this station: <%= @stations.most_frequent_starting_bike_id %></li>
