--- a/app/views/trips/trips-dashboard.erb
+++ b/app/views/trips/trips-dashboard.erb
@@ -1,32 +1,25 @@
 <h1>Trips Dashboard</h1>
   <div class="container">
     <div class="row">
-           <div class="col s12 m6">
+           <div class="col s12">
              <div class="card blue-grey darken-1">
                <div class="card-content white-text">
                  <ul>
-                   <li> Average duration of a ride: <%= @trips.average_ride_duration %></li>
-                   <li> Longest ride: <%= @trips.longest_ride %></li>
-                   <li> Shortest ride:<%= @trips.shortest_ride %></li>
-                   <li> Station with the most rides as a starting place: <%= @trips.most_popular_starting_station %></li>
-                   <li> Station with the most rides as an ending place: <%= @trips.most_popular_ending_station %></li>
+                   <li> Average duration of a ride: <%= @trips.average_ride_duration.to_i %> seconds</li>
+                   <li> Longest ride: <%= @trips.longest_ride %> seconds</li>
+                   <li> Shortest ride: <%= @trips.shortest_ride %> seconds</li>
+                   <li> Station with the most rides as a starting place: <%= @trips.most_popular_starting_station.name %></li>
+                   <li> Station with the most rides as an ending place: <%= @trips.most_popular_ending_station.name %></li>
                    <li> Month by Month breakdown of number of rides with subtotals for each year: <%# <%= @trips.newest_station %></li>
-                   <li> Most ridden bike with total number of rides for that bike: <%= @trips.most_ridden_bike %></li>
-                   <li> Least ridden bike with total number of rides for that bike: <%= @trips.least_ridden_bike %></li>
-                   <li> User subscription type breakout with both count and percentage: <%# <%= @trips.subscription_breakdown_count_percentage %></li>
-                   <li> Single date with the highest number of trips with a count of those trips: <%= @trips.date_most_travelled %></li>
-                   <li> Single date with the lowest number of trips with a count of those trips: <%= @trips.date_least_travelled %></li>
+                   <li> Most ridden bike: <%= @trips.most_ridden_bike[0] %> Total number of rides for that bike: <%= @trips.most_ridden_bike[1] %></li>
+                   <li> Least ridden bike: <%= @trips.least_ridden_bike[0] %> Total number of rides for that bike: <%= @trips.least_ridden_bike[1] %></li>
+                   <li> Single date with the highest number of trips: <%= @trips.date_most_travelled[0] %> </br> Number of trips: <%= @trips.date_most_travelled[1] %></li>
+                   <li> Single date with the lowest number of trips: <%= @trips.date_least_travelled[0] %> </br>Number of trips: <%= @trips.date_least_travelled[1] %></li>
                    <li> Weather on the day with the highest rides: <%# <= @trips.weather_highest_rides></li> %>
                    <li> Weather on the day with the lowest rides: <%# <%= @trips.weather_lowest_rides></li> %>
                  </ul>
                </div>
-            <div class="card-action">
-               <a href="/stations/<%= @station.id %>/edit">Edit Station</a>
-               <form action="/stations/<%= @station.id %>" method="POST">
-                 <input type="hidden" name="_method" value="DELETE">
-                 <input type="submit" value="Delete Station">
-               </form>
-            </div>
+
           </div>
          </div>
       </div>
